# project-lukasz-orlikowski

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  Rocket.toml
backend/migrations/1-create_user/: up.sql
backend/migrations/10-create-milestone/: down.sql  up.sql
backend/migrations/2-create_private_board/: down.sql  up.sql
backend/migrations/3-create_team/: up.sql
backend/migrations/4-create-team-user/: down.sql  up.sql
backend/migrations/5-create-team-board/: down.sql  up.sql
backend/migrations/6-create-list/: down.sql  up.sql
backend/migrations/7-create-task/: up.sql
backend/migrations/8-create-timer/: down.sql  up.sql
backend/migrations/9-create-log/: down.sql  up.sql
backend/migrations/create_private_board/: up.sql
backend/migrations/create_user/: up.sql
backend/src/: auth.rs  board.rs  db.rs  list.rs  log.rs  main.rs  milestone.rs  schema.rs  task.rs  team.rs  test.rs  timer.rs  types.rs  user.rs  utils.rs
frontend/: Cargo.toml  Dockerfile  index.html
frontend/src/: api.rs  main.rs  types.rs  utils.rs
frontend/src/components/: board.rs  login.rs  mainPage.rs  main_page.rs  milestone.rs  mod.rs  navbar.rs  privateBoardCreate.rs  private_board_create.rs  register.rs  teamBoardCreate.rs  teamCreate.rs  team_board_create.rs  team_create.rs  timer.rs
