[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
gloo-storage = "0.2.1"
log = "0.4.6"
wasm-logger = "0.2.0"
stdweb = "0.4.6"
gloo-utils = "0.1.2"
wasm-bindgen = "0.2.80"
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
yew-hooks = "0.1.56"
wasm-bindgen-futures = "0.4.30"
yew-router = "0.16"
gloo-net = "0.2.0"
gloo-timers = "0.2.4"
wasm-timer = "0.2.5"